--- a/PatientProject/Angular/angular.json
+++ b/PatientProject/Angular/angular.json
@@ -24,8 +24,13 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/Luna-Green/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css",
               "src/styles.css"
-            ],
+     ],
+                
             "scripts": []
           },
           "configurations": {
@@ -88,6 +93,7 @@
               "src/assets"
             ],
             "styles": [
+            
               "src/styles.css"
             ],
             "scripts": []
